# Frankie

./: PonerAlDia.bat  README.md
firmware/: CMakeLists.txt  config.h  firmware.c  globals.h  gpt.c  motor.h
firmware/tasks/: CMakeLists.txt  task_bluetooth.c  task_bluetooth.h  task_curva.c  task_curva.h  task_recto.c  task_recto.h  task_tacometro_left.c  task_tacometro_left.h  task_tacometro_right.c  task_tacometro_right.h
lcd/include/: lcd.h
motores/: CMakeLists.txt  motores.c
rtc/: CMakeLists.txt
rtc/include/: rtc.h
rtc/src/: rtc.c
